--- a/index.html
+++ b/index.html
@@ -37,22 +37,20 @@
               `"
             >
             </span>
-            <span class="progress-text" x-text="e.name">
-            </span>
+            <span class="progress-text" x-text="e.name"> </span>
           </span>
         </template>
       </div>
-  
+
       <!-- Current era section of the page -->
       <div class="current-era-section">
-        <p class="title-div" style="margin: 35px 0px 5px 0px;">The Current Era is</p>
+        <p class="title-div" style="margin: 35px 0px 5px 0px">
+          The current era is
+        </p>
 
         <!-- Current era progress bar -->
         <div class="current-era-div">
-          <span
-            class="era-box"
-            style="width: 100%; border: 1px solid #493548;"
-          >
+          <span class="era-box" style="width: 100%; border: 1px solid #493548">
             <span
               :style="`
                 background-color: ${currentEra?.color};
@@ -68,28 +66,57 @@
 
         <!-- Current era start and end dates -->
         <div class="current-era-endpoints">
-          <span x-text="startLocal" style="text-align: left;"></span>
-          <span x-text="endLocal" style="text-align: right;"></span>
+          <span x-text="startLocal" style="text-align: left"></span>
+          <span x-text="endLocal" style="text-align: right"></span>
         </div>
         <div class="current-era-endpoints">
-          <span style="text-align: left;">
-            <span x-text="currentEra?.startYear / 1000000" ></span>
+          <span style="text-align: left">
+            <span x-text="currentEra?.startYear / 1000000"></span>
             Mya
           </span>
-          <span style="text-align: left;">
-            <span x-text="currentEra?.endYear / 1000000" ></span>
+          <span style="text-align: left">
+            <span x-text="currentEra?.endYear / 1000000"></span>
             Mya
           </span>
         </div>
       </div>
 
-      <!-- Preview days left/right -->
-      <div style="display: flex; justify-content: center; margin: 10px">
-        <button x-on:click="resetPreviewDays()" style="margin: 5px">Today</button>
-        <span style="margin-top: 4px">±</span>
-        <input type="number" x-model.number="previewDays" style="width: 50px">
+      <!-- Offset days left/right -->
+      <div
+        style="
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin: 10px;
+        "
+      >
+        <div x-text="offsetDays === 0 ? 'Real local time:' : 'Offset local time:'"></div>
+        <div style="margin-bottom: 10px">
+          <span x-text="currentTime"></span>
+        </div>
+        <div>
+          <span style="margin: 5px 5px 0px 0px">Offset by</span>
+          <input
+            type="number"
+            x-model.number="offsetDays"
+            style="width: 30px"
+          />
+          <span style="margin: 5px 5px 0px 0px">days</span>
+          <button x-on:click="incrementOffsetDays(-1)" style="margin: 5px">
+            -1
+          </button>
+          <button x-on:click="incrementOffsetDays(1)" style="margin: 5px">
+            +1
+          </button>
+          <button
+            x-on:click="resetOffsetDays()"
+            style="margin: 5px"
+            :disabled="offsetDays==0"
+          >
+            Reset
+          </button>
+        </div>
       </div>
-
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
