--- a/index.html
+++ b/index.html
@@ -123,30 +123,27 @@
         </div>
       </div>
 
+      <!-- Events -->
       <div>
         <table width="100%">
-          <tr>
-            <th colspan="3">Past Events</th>
-          </tr>
-          <template x-for="(e, index) in pastEvents">
-            <tr>
-              <td x-text="e.name"></td>
-              <td
-                x-text="e.year < 1000000 ? e.year : e.year / 1000000 + ' Mya'"
-              ></td>
-              <td x-text="e.localDate"></td>
-            </tr>
-          </template>
-          <tr>
-            <th colspan="3">Upcoming Events</th>
+          <tr style="text-align: left">
+            <th colspan="3">Events This Day</th>
           </tr>
           <template x-for="(e, index) in upcomingEvents">
             <tr>
-              <td x-text="e.name"></td>
+              <td>
+                <template x-if="e.link">
+                  <a :href="e.link" target="_blank" x-text="e.name"></a>
+                </template>
+                <template x-if="!e.link">
+                  <span x-text="e.name"></span>
+                </template>
+              </td>
               <td
-                x-text="e.year < 1000000 ? e.year : e.year / 1000000 + ' Mya'"
+                class="no-wrap"
+                x-text="e.year < 1000000 ? e.year + ' ya' : e.year / 1000000 + ' Mya'"
               ></td>
-              <td x-text="e.localDate"></td>
+              <td class="no-wrap" x-text="e.localTime"></td>
             </tr>
           </template>
         </table>
